syntax = "proto3";

package sns.post.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "sns/post/v1;v1";
option java_multiple_files = true;
option java_package = "com.kratos.sns.post.v1";
option objc_class_prefix = "SnsPostV1";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {
    option (google.api.http) = {
      post: "/sns/v1/post.PostService/CreatePost"
      body: "*"
    };
  }

  rpc GetPost(GetPostRequest) returns (GetPostResponse) {
    option (google.api.http) = {
      post: "/sns/v1/post.PostService/GetPost"
      body: "*"
    };
  }

  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {
    option (google.api.http) = {
      post: "/sns/v1/post.PostService/ListPosts"
      body: "*"
    };
  }

  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {
    option (google.api.http) = {
      post: "/sns/v1/post.PostService/UpdatePost"
      body: "*"
    };
  }

  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {
    option (google.api.http) = {
      post: "/sns/v1/post.PostService/DeletePost"
      body: "*"
    };
  }
}

message Post {
  string id = 1;
  string title = 2 [(validate.rules).string = { min_len: 1, max_len: 128 }];
  string content = 3;

  reserved 5 to 15;

  int64 created_at = 16;
  int64 updated_at = 17;
}

message CreatePostRequest {
  Post post = 1 [(validate.rules).message.required = true];
}
message CreatePostResponse {
  string id = 1;
}

message GetPostRequest {
  string id = 1 [(validate.rules).string.ignore_empty = false];
}
message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {
  string keyword = 1;
  int32 page_size = 2;
  string page_token = 3;
}
message ListPostsResponse {
  repeated Post posts = 1;
  string next_page_token = 2;
}

message UpdatePostRequest {
  Post post = 1;
}
message UpdatePostResponse { }

message DeletePostRequest {
  string id = 1;
}
message DeletePostResponse { }
